remove meta.yml and environemnt.yml form modules_files

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -82,7 +82,7 @@ jobs:
               .map(path => path.replace('modules/nf-core/', '')
               .split('/')
               .slice(0, 2)
-              .filter(x => x !== 'main.nf' && x !== 'tests')
+              .filter(x => x !== 'main.nf' && x !== 'tests' && x !== 'meta.yml' && x !== 'environment.yml')
               .join('/')))];
 
       - name: Get subworkflow name
@@ -94,7 +94,7 @@ jobs:
               .map(path => path.replace('subworkflows/nf-core/', '')
               .split('/')
               .slice(0,2)
-              .filter(x => x !== 'main.nf' && x !== 'tests')
+              .filter(x => x !== 'main.nf' && x !== 'tests' && x !== 'meta.yml' && x !== 'environment.yml')
               .join('/')))];
 
       - name: debug
@@ -103,7 +103,6 @@ jobs:
           echo ${{ steps.filter.outputs.subworkflows_files }}
           echo ${{ steps.module_names.outputs.result }}
           echo ${{ steps.subworkflow_names.outputs.result }}
-          echo ${{ steps.filter.outputs.modules }}
 
   nf-core-lint-modules:
     runs-on: ${{ github.event.inputs.runners  || 'self-hosted' }}
@@ -113,7 +112,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        module: "${{ fromJson(needs.nf-core-changes.outputs.modules) }}"
+        module: "${{ fromJson(needs.nf-core-changes.outputs.modules_files) }}"
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
