--- a/modules/nf-core/sam2lca/updatedb/meta.yml
+++ b/modules/nf-core/sam2lca/updatedb/meta.yml
@@ -23,7 +23,7 @@ input:
   -  - acc2tax_name:
         type: string
         description: Name of accession2taxid type to use
-  -  - acc2tax_name:
+  -  - taxo_db_name:
         type: string
         description: Name of taxonomy dabase type to use
   -  - taxo_nodes:
