Fix CI modules lint (#7056)
* use outputs.modules instead of outputs.modules_files

* modify a module to test CI

* remove meta.yml and environemnt.yml form modules_files

* Revert "modify a module to test CI"

This reverts commit e160c16561d5df8fa8bd49d2e0a32f5274a55512.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -82,7 +82,7 @@ jobs:
               .map(path => path.replace('modules/nf-core/', '')
               .split('/')
               .slice(0, 2)
-              .filter(x => x !== 'main.nf' && x !== 'tests')
+              .filter(x => x !== 'main.nf' && x !== 'tests' && x !== 'meta.yml' && x !== 'environment.yml')
               .join('/')))];
 
       - name: Get subworkflow name
@@ -94,7 +94,7 @@ jobs:
               .map(path => path.replace('subworkflows/nf-core/', '')
               .split('/')
               .slice(0,2)
-              .filter(x => x !== 'main.nf' && x !== 'tests')
+              .filter(x => x !== 'main.nf' && x !== 'tests' && x !== 'meta.yml' && x !== 'environment.yml')
               .join('/')))];
 
       - name: debug
