--- a/subworkflows/nf-core/bam_tumor_only_somatic_variant_calling_gatk/meta.yml
+++ b/subworkflows/nf-core/bam_tumor_only_somatic_variant_calling_gatk/meta.yml
@@ -19,51 +19,24 @@ components:
   - gatk4/calculatecontamination
   - gatk4/filtermutectcalls
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
-  - input:
-      type: list
-      description: list containing one BAM file, also able to take CRAM as an input
-      pattern: "[ *.{bam/cram} ]"
-  - input_index:
-      type: list
-      description: list containing one BAM file indexe, also able to take CRAM index as an input
-      pattern: "[ *.{bam.bai/cram.crai} ]"
-  - fasta:
-      type: file
-      description: The reference fasta file
-      pattern: "*.fasta"
-  - fai:
-      type: file
-      description: Index of reference fasta file
-      pattern: "*.fasta.fai"
-  - dict:
-      type: file
-      description: GATK sequence dictionary
-      pattern: "*.dict"
-  - germline_resource:
-      type: file
-      description: Population vcf of germline sequencing, containing allele fractions.
-      pattern: "*.vcf.gz"
-  - germline_resource_tbi:
-      type: file
-      description: Index file for the germline resource.
-      pattern: "*.vcf.gz.tbi"
-  - panel_of_normals:
-      type: file
-      description: vcf file to be used as a panel of normals.
-      pattern: "*.vcf.gz"
-  - panel_of_normals_tbi:
-      type: file
-      description: Index for the panel of normals.
-      pattern: "*.vcf.gz.tbi"
-  - interval_file:
-      type: file
-      description: File containing intervals.
-      pattern: "*.interval_list"
+  - ch_input:
+      description: ""
+  - ch_fasta:
+      description: ""
+  - ch_fai:
+      description: ""
+  - ch_dict:
+      description: ""
+  - ch_germline_resource:
+      description: ""
+  - ch_germline_resource_tbi:
+      description: ""
+  - ch_panel_of_normals:
+      description: ""
+  - ch_panel_of_normals_tbi:
+      description: ""
+  - ch_interval_file:
+      description: ""
 output:
   - versions:
       type: file
@@ -73,10 +46,6 @@ output:
       type: file
       description: Compressed vcf file to be used for variant_calling.
       pattern: "[ *.vcf.gz ]"
-  - mutect2_tbi:
-      type: file
-      description: Indexes of the mutect2_vcf file
-      pattern: "[ *vcf.gz.tbi ]"
   - mutect2_stats:
       type: file
       description: Stats files for the mutect2 vcf
@@ -97,14 +66,14 @@ output:
       type: file
       description: file containing filtered mutect2 calls.
       pattern: "*.vcf.gz"
-  - filtered_tbi:
-      type: file
-      description: tbi file that pairs with filtered vcf.
-      pattern: "*.vcf.gz.tbi"
   - filtered_stats:
       type: file
       description: file containing statistics of the filtermutectcalls run.
       pattern: "*.filteringStats.tsv"
+  - mutect2_index:
+      description: ""
+  - filtered_index:
+      description: ""
 authors:
   - "@GCJMackenzie"
 maintainers:
