--- a/subworkflows/nf-core/bam_variant_calling_sort_freebayes_bcftools/meta.yml
+++ b/subworkflows/nf-core/bam_variant_calling_sort_freebayes_bcftools/meta.yml
@@ -13,66 +13,17 @@ components:
   - bcftools/sort
   - bcftools/index
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
-  - input1:
-      type: file
-      description: BAM/CRAM/SAM file;
-      pattern: "*.{bam,cram,sam}"
-  - index1:
-      type: file
-      description: Index BAI/CRAI/CSI file
-      pattern: "*.{bai,crai,csi}"
-  - input2:
-      type: file
-      description: BAM/CRAM/SAM file; used to run variant calling with pair (normal vs tumor)
-      pattern: "*.{bam,cram,sam}"
-  - index2:
-      type: file
-      description: Index BAI/CRAI/CSI file
-      pattern: "*.{bai,crai,csi}"
-  - bed:
-      type: file
-      description: Optional - Limit analysis to targets listed in this BED-format FILE.
-      pattern: "*.bed"
-  - meta2:
-      type: map
-      description: |
-        Groovy Map containing reference information
-        e.g. [ id:'test' ]
-  - fasta:
-      type: file
-      description: reference fasta file
-      pattern: ".{fa,fa.gz,fasta,fasta.gz}"
-  - fai:
-      type: file
-      description: reference fasta file index
-      pattern: "*.{fa,fasta}.fai"
-  - samples:
-      type: file
-      description: Optional - Limit analysis to samples listed (one per line) in the FILE.
-      pattern: "*.txt"
-  - populations:
-      type: file
-      description: Optional - Each line of FILE should list a sample and a population which it is part of.
-      pattern: "*.txt"
-  - cnv:
-      type: file
-      description: |
-        A copy number map BED file, which has either a sample-level ploidy:
-        sample_name copy_number
-        or a region-specific format:
-        seq_name start end sample_name copy_number
-      pattern: "*.bed"
+  - ch_input:
+      description: ""
+  - ch_fasta_fai:
+      description: ""
+  - ch_samples:
+      description: ""
+  - ch_populations:
+      description: ""
+  - ch_cnv:
+      description: ""
 output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
   - versions:
       type: file
       description: File containing software versions
