--- a/subworkflows/nf-core/bam_variant_demix_boot_freyja/meta.yml
+++ b/subworkflows/nf-core/bam_variant_demix_boot_freyja/meta.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: "bam_variant_demix_boot_freyja"
-description: Recover relative lineage abundances from mixed SARS-CoV-2 samples from a sequencing dataset (BAM aligned to the Hu-1 reference)
+description: Recover relative lineage abundances from mixed SARS-CoV-2 samples from
+  a sequencing dataset (BAM aligned to the Hu-1 reference)
 keywords:
   - bam
   - variants
@@ -37,22 +38,14 @@ input:
       description: |
         Structure: path(lineages_meta)
         File containing lineage metadata that correspond to barcodes
+  - val_skip_boot:
+      description: ""
 output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
   - variants:
       type: file
       description: |
         Structure: [ val(meta), path(variants) ]
         File containing identified variants in a gff-like format
-  - depths:
-      type: file
-      description: |
-        Structure: [ val(meta), path(variants) ]
-        File containing depth of the variants
   - demix:
       type: file
       description: |
@@ -70,10 +63,12 @@ output:
         a csv file that includes the lineages present but summarized by constellation and their corresponding abundances
   - barcodes:
       type: file
-      description: path(barcodes) a csv file that includes the lineages present but summarized by constellation and their corresponding abundances
+      description: path(barcodes) a csv file that includes the lineages present but
+        summarized by constellation and their corresponding abundances
   - lineages_meta:
       type: file
-      description: path(lineages_meta) a csv file that includes the lineages present but summarized by constellation and their corresponding abundances
+      description: path(lineages_meta) a csv file that includes the lineages present
+        but summarized by constellation and their corresponding abundances
   - versions:
       type: file
       description: File containing software versions
