--- a/subworkflows/nf-core/fasta_explore_search_plot_tidk/meta.yml
+++ b/subworkflows/nf-core/fasta_explore_search_plot_tidk/meta.yml
@@ -31,6 +31,10 @@ input:
       description: |
         A priori sequence
         Structure: [ val(meta), val(sequence) ]
+  - //:
+      description: ""
+  - //:
+      description: ""
 output:
   - apriori_tsv:
       type: file
