--- a/subworkflows/nf-core/fasta_hmmsearch_rank_fastas/meta.yml
+++ b/subworkflows/nf-core/fasta_hmmsearch_rank_fastas/meta.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: "fasta_hmmsearch_rank_fastas"
-description: Run hmmsearch and output separate fasta files for top scoring hits to each profile
+description: Run hmmsearch and output separate fasta files for top scoring hits to
+  each profile
 keywords:
   - hmmer
   - search
@@ -28,18 +29,14 @@ output:
         Channel containing the TSV file from ranking hmmsearch hits
         Structure: [ val(meta), path(hmmrank) ]
       pattern: "*.hmmrank.tsv.gz"
-  - bai:
-      type: file
-      description: |
-        Channel containing subsets of sequences
-        Structure: [ val(meta), path(fasta) ]
-      pattern: "*.fa.gz"
   - versions:
       type: file
       description: |
         File containing software versions
         Structure: [ path(versions.yml) ]
       pattern: "versions.yml"
+  - seqfastas:
+      description: ""
 authors:
   - "@erikrikarddaniel"
 maintainers:
