--- a/subworkflows/nf-core/fasta_newick_epang_gappa/meta.yml
+++ b/subworkflows/nf-core/fasta_newick_epang_gappa/meta.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: "fasta_newick_epang_gappa"
-description: Run phylogenetic placement with a number of query sequences plus a reference alignment and phylogeny. Used in nf-core/phyloplace.
+description: Run phylogenetic placement with a number of query sequences plus a reference
+  alignment and phylogeny. Used in nf-core/phyloplace.
 keywords:
   - phylogenetic placement
   - phylogenetics
@@ -33,39 +34,7 @@ input:
             taxonomy:     path("*.tsv")
           ]
         ]
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
-  - queryseqfile:
-      type: file
-      description: Fasta file with query sequences
-      pattern: "*.{faa,fna,fa,fasta,fa,faa.gz,fna.gz,fa.gz,fasta.gz,fa.gz}"
-  - refseqfile:
-      type: file
-      description: File with reference sequences; aligned unless an hmmfile is provided
-      pattern: "*.{faa,fna,fa,fasta,fa,phy,aln,alnfaa,alnfna,alnfa,mfa,faa.gz,fna.gz,fa.gz,fasta.gz,fa.gz,phy.gz,aln.gz,alnfaa.gz,alnfna.gz,alnfa.gz,mfa.gz}"
-  - refphylogeny:
-      type: file
-      description: Newick file with reference phylogenetic tree
-      pattern: "*.{newick,tree}"
-  - hmmfile:
-      type: file
-      description: HMM file to use for alignment; implies that refseqfile is not aligned. Optional.
-      pattern: "*.{hmm,HMM,hmm.gz,HMM.gz}"
-  - model:
-      type: string
-      description: Phylogenetic model to use in placement, e.g. 'LG+F' or 'GTR+I+F'
-  - alignmethod:
-      type: string
-      description: Method used for alignment, 'hmmer' or 'mafft'
 output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
   - epang:
       type: directory
       description: All output from EPA-NG
