--- a/subworkflows/nf-core/fastq_align_mapad/meta.yml
+++ b/subworkflows/nf-core/fastq_align_mapad/meta.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: "fastq_align_mapad"
-description: Align FASTQ files against reference genome with the mapAD aDNA short-read aligner producing a sorted and indexed BAM files
+description: Align FASTQ files against reference genome with the mapAD aDNA short-read
+  aligner producing a sorted and indexed BAM files
 keywords:
   - sort
   - fastq
