--- a/subworkflows/nf-core/fastq_download_prefetch_fasterqdump_sratools/meta.yml
+++ b/subworkflows/nf-core/fastq_download_prefetch_fasterqdump_sratools/meta.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: fastq_download_prefetch_fasterqdump_sratools
-description: Download FASTQ sequencing reads from the NCBI's Sequence Read Archive (SRA).
+description: Download FASTQ sequencing reads from the NCBI's Sequence Read Archive
+  (SRA).
 keywords:
   - SRA
   - NCBI
@@ -13,29 +14,11 @@ components:
   - sratools/prefetch
   - sratools/fasterqdump
 input:
-  - meta:
-      type: map
-      description: >
-        Groovy Map containing sample information e.g. [ id:'test', single_end:false ]
-
-  - id:
-      type: string
-      description: >
-        SRA run identifier.
-
-  - certificate:
-      type: file
-      description: >
-        Path to a JWT cart file used to access protected dbGAP data on SRA using the sra-toolkit
-
-      pattern: "*.cart"
-# TODO Update when we decide on a standard for subworkflow docs
+  - ch_sra_ids:
+      description: ""
+  - ch_dbgap_key:
+      description: ""
 output:
-  - meta:
-      type: map
-      description: >
-        Groovy Map containing sample information e.g. [ id:'test', single_end:false ]
-
   - reads:
       type: file
       description: Extracted FASTQ file or files if the sequencing reads are paired-end.
