--- a/subworkflows/nf-core/fastq_align_bowtie2/meta.yml
+++ b/subworkflows/nf-core/fastq_align_bowtie2/meta.yml
@@ -15,11 +15,6 @@ components:
   - samtools/flagstat
   - bam_sort_stats_samtools
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
   - ch_reads:
       type: file
       description: |
@@ -57,10 +52,20 @@ output:
       type: file
       description: Unaligned FastQ files
       pattern: "*.fastq.gz"
-  - log:
-      type: file
-      description: Alignment log
-      pattern: "*.log"
+  - bam_orig:
+      description: ""
+  - log_out:
+      description: ""
+  - bai:
+      description: ""
+  - csi:
+      description: ""
+  - stats:
+      description: ""
+  - flagstat:
+      description: ""
+  - idxstats:
+      description: ""
 authors:
   - "@drpatelh"
 maintainers:
