--- a/subworkflows/nf-core/fastq_contam_seqtk_kraken/meta.yml
+++ b/subworkflows/nf-core/fastq_contam_seqtk_kraken/meta.yml
@@ -9,31 +9,20 @@ components:
   - kraken2/kraken2
   - seqtk/sample
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
-  - reads:
-      type: file
-      description: List of input FastQ files of size 1 and 2 for single-end and paired-end data, respectively
   - sample_size:
       type: string
       description: Number of reads to subsample for contamination detection.
+  - ch_reads:
+      description: ""
+  - kraken2_db:
+      description: ""
 output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test', single_end:false ]
-  - report:
-      type: file
-      description: Kraken2 contamination report
-      pattern: "*.txt"
   - versions:
       type: file
       description: File containing software versions
       pattern: "versions.yml"
+  - reports:
+      description: ""
 authors:
   - "@apeltzer"
 maintainers:
