--- a/subworkflows/nf-core/fastq_fastqc_umitools_trimgalore/meta.yml
+++ b/subworkflows/nf-core/fastq_fastqc_umitools_trimgalore/meta.yml
@@ -13,11 +13,6 @@ components:
   - umitools/extract
   - trimgalore
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
   - reads:
       type: file
       description: |
@@ -51,7 +46,8 @@ output:
   - reads:
       type: file
       description: >
-        Extracted FASTQ files. | For single-end reads, pattern is \${prefix}.umi_extract.fastq.gz. |
+        Extracted FASTQ files. | For single-end reads, pattern is \${prefix}.umi_extract.fastq.gz.
+        |
 
 
 
@@ -65,10 +61,6 @@ output:
       type: file
       description: FastQC report archive
       pattern: "*_{fastqc.zip}"
-  - log:
-      type: file
-      description: Logfile for umi_tools
-      pattern: "*.{log}"
   - trim_unpaired:
       type: file
       description: |
@@ -93,6 +85,8 @@ output:
       type: file
       description: File containing software versions
       pattern: "versions.yml"
+  - umi_log:
+      description: ""
 authors:
   - "@drpatelh"
   - "@KamilMaliszArdigen"
