--- a/subworkflows/nf-core/utils_nfcore_pipeline/meta.yml
+++ b/subworkflows/nf-core/utils_nfcore_pipeline/meta.yml
@@ -13,10 +13,8 @@ input:
       description: |
         Nextflow CLI positional arguments
 output:
-  - success:
-      type: boolean
-      description: |
-        Dummy output to indicate success
+  - valid_config:
+      description: ""
 authors:
   - "@adamrtalbot"
 maintainers:
