--- a/subworkflows/nf-core/vcf_annotate_ensemblvep/meta.yml
+++ b/subworkflows/nf-core/vcf_annotate_ensemblvep/meta.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
 name: vcf_annotate_ensemblvep
-description: Perform annotation with ensemblvep and bgzip + tabix index the resulting VCF file
+description: Perform annotation with ensemblvep and bgzip + tabix index the resulting
+  VCF file
 keywords:
   - vcf
   - annotation
