--- a/subworkflows/nf-core/vcf_gather_bcftools/meta.yml
+++ b/subworkflows/nf-core/vcf_gather_bcftools/meta.yml
@@ -15,11 +15,6 @@ components:
   - bcftools/concat
   - tabix/tabix
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing at least two fields: 'id' and a common field for each VCF that needs to be merged
-        e.g. [ id:'test.001', common_meta:'test' ]
   - ch_vcfs:
       type: file(s)
       description: |
@@ -31,24 +26,11 @@ input:
         The output created from a scatter subworkflow (contains a BED file and scatter_count).
         The BED file isn't actually used in the pipeline so can remain empty if you manually set this input channel
         Structure: [ meta, bed, scatter_count ]
-  - common_meta:
-      type: string
-      description: |
-        OPTIONAL:
-        The string of the common meta to use as the new 'id'.
-        Please make sure all VCFs that need to be concatenated have the same value in the
-        the meta field specified. (and that only the ID is different between these files)
-  - sort:
-      type: boolean
-      description: |
-        Whether or not to sort the output VCF,
-        this can be useful if this subworkflow isn't used in a scatter/gather workflow
+  - val_common_meta:
+      description: ""
+  - val_sort:
+      description: ""
 output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
   - vcf:
       type: file
       description: |
